# CipherShare

./: .gitignore  pyproject.toml  server.py  test_direct_peers.py
src/: file_service.py  peer.py  utils.py
src/config/: config.py
src/database/: database.py
src/peer/: file_service.py  main.py  peer.py
src/peer/crypto/: __init__.py  crypto_utils.py
src/server/: client_thread.py  config.py  crypto_utils.py  globals.py  in_memory_storage.py  main.py  peer_registry.py  server.py  udp_handler.py
src/server/database/: database.py
src/server/static/: static.py
src/types/: types.py
tests/: stress_testing.py
tests/crypto/: crypto_utils.py
tests/server/: client_thread_test.py  test_peer_registry.py
